[workspace]
members = [
    ".",
    "example",
]

[package]
name = "nrf-usbd"
version = "0.1.0"
edition = "2018"
description = "USB driver for nRF microcontrollers"
license = "MIT OR Apache-2.0"
keywords = ["nrf52", "nrf", "hal", "usb", "peripheral"]
categories = ["embedded", "hardware-support", "no-std"]
repository = "https://github.com/nrf-rs/nrf-usbd"

[dependencies]
cortex-m = "0.7.2"
usb-device = "0.2.8"
vcell = "0.1.3"
critical-section = "0.2.4"
bare-metal = "1.0.0"

[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = false
opt-level = 1
overflow-checks = true

[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = "fat"
opt-level = 's'
overflow-checks = false

# do not optimize proc-macro crates = faster builds from scratch
[profile.dev.build-override]
codegen-units = 8
debug = false
debug-assertions = false
opt-level = 0
overflow-checks = false

[profile.release.build-override]
codegen-units = 8
debug = false
debug-assertions = false
opt-level = 0
overflow-checks = false
