[package]
name = "nrf-usbd-example"
version = "0.1.0"
edition = "2018"
publish = false

[features]
default = [
    "defmt-default",
]
defmt-default = []
defmt-trace = []
defmt-debug = []
defmt-info = []
defmt-warn = []
defmt-error = []

[dependencies]
panic-probe = { version = "0.2.0", features = ["print-defmt"] }
defmt = "0.2.0"
defmt-rtt = "0.2.0"

cortex-m = {version = "0.7.2", features = ["critical-section-single-core"] }
cortex-m-rt = "0.6.12"

nrf-usbd = { path = "../" }
usb-device = "0.3.0"
usbd-serial = "0.2.0"
nrf52840-pac = "0.9.0"
