[package]
name = "nrf-usbd-example"
version = "0.1.0"
edition = "2018"
publish = false

[features]
default = [
    "defmt-default",
]
defmt-default = []
defmt-trace = []
defmt-debug = []
defmt-info = []
defmt-warn = []
defmt-error = []

[dependencies]
panic-probe = { version = "0.3.2", features = ["print-defmt"] }
defmt = "0.3.8"
defmt-rtt = "1.0.0"

cortex-m = {version = "0.7.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7.3"

nrf-usbd = { path = "../" }
usb-device = "0.3.2"
usbd-serial = "0.2.2"
nrf52840-pac = "0.12.2"
